rust/macros/tests/invalid/target/debug/deps/single_argument-771d5cc76e74f948.d
/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/single_argument-771d5cc76e74f948.d: single_argument.rs Cargo.toml

/Users/ray/projects/exercism/rust/macros/tests/invalid/target/debug/deps/libsingle_argument-771d5cc76e74f948.rmeta: single_argument.rs Cargo.toml

single_argument.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
